--- a/templates/operations.html
+++ b/templates/operations.html
@@ -90,9 +90,19 @@
                         </td>
                         <td>{{ buy.created_at.strftime('%Y-%m-%d %H:%M') if buy.created_at else 'N/A' }}</td>
                         <td>
-                            <a href="/tenant/{{ tenant.tenant_id }}/gam/order/{{ buy.media_buy_id }}/line-items" class="btn btn-sm btn-link" title="View GAM Line Items">
-                                View Line Items
+                            {% if buy.status == 'pending_manual' %}
+                            <a href="/tenant/{{ tenant.tenant_id }}/media-buy/{{ buy.media_buy_id }}/approve" class="btn btn-sm btn-primary" title="Review and Approve">
+                                Review & Approve
                             </a>
+                            {% elif buy.status == 'active' %}
+                            <a href="/tenant/{{ tenant.tenant_id }}/media-buy/{{ buy.media_buy_id }}/details" class="btn btn-sm btn-link" title="View Details">
+                                View Details
+                            </a>
+                            {% else %}
+                            <a href="/tenant/{{ tenant.tenant_id }}/media-buy/{{ buy.media_buy_id }}/details" class="btn btn-sm btn-link" title="View Details">
+                                View Details
+                            </a>
+                            {% endif %}
                         </td>
                     </tr>
                     {% endfor %}
