--- a/templates/adapters/mock_product_config.html
+++ b/templates/adapters/mock_product_config.html
@@ -131,7 +131,7 @@
 
         <div style="margin-top: 2rem;">
             <button type="submit" class="btn">Save Configuration</button>
-            <a href="{{ url_for('list_products', tenant_id=tenant_id) }}" class="btn btn-secondary">Cancel</a>
+            <a href="{{ url_for('products.list_products', tenant_id=tenant_id) }}" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
 </div>
